--- a/source/blocks/select-direction/select-direction.html
+++ b/source/blocks/select-direction/select-direction.html
@@ -1,12 +1,12 @@
 {% macro selectDirection(selected) %}
-{% set countries = [
+{%- set countries = [
   "Босния и герцеговина",
   "Чехословакия",
   "Боливия",
   "Гондурас",
   "Алжир",
   "Венесуэла"
-] %}
+] -%}
 <div class="select-direction">
   <ul class="select-direction__list country-list">
     <li class="country-list__item">Выберите страну</li>
