Формы для тестирования

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,7 @@
     <section class="filter-companions">
       <h2 class="filter-companions__heading">Подберите идеального попутчика</h2>
 
-      <form action="">
+      <form action="https://echo.htmlacademy.ru">
 
         <details class="filter-companions__by-hobby filter-by-hobby">
           <summary id="filter-companions__by-hobby" class="filter-by-hobby__title">Хобби</summary>
