--- a/source/index.html
+++ b/source/index.html
@@ -176,7 +176,7 @@
         Уже зарегистрированы? Тогда скорее <a href="#" class="calls-to-action__auth-link">авторизуйтесь</a>.
       </p>
 
-      <form action="#" aria-label="Форма регистрации">
+      <form action="https://echo.htmlacademy.ru" aria-label="Форма регистрации">
         <input type="text" class="calls-to-action__registration-email" aria-label="Электронная почта" name="email">
         <button type="submit" class="calls-to-action__register">
           <span class="visually-hidden">Зарегистрироваться</span>
