Выделение блока подзаголовка, для стилизации

--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
       </ol>
 
       <section class="first-screen__about-service about-service">
-        <h2 class="about-service__heading">О сервисе</h2>
+        <h2 class="about-service__heading subheading">О сервисе</h2>
 
         <p class="about-service__description">
           Любое путешествие веселее
@@ -58,7 +58,7 @@
     </section>
 
     <section class="directions">
-      <h2 class="directions__heading">Направления</h2>
+      <h2 class="directions__heading subheading">Направления</h2>
 
       <p class="directions__disclaimer">
         Мы не продаем туры
@@ -91,7 +91,7 @@
     </section>
 
     <section class="companions">
-      <h2 class="companoins__heading">Попутчики</h2>
+      <h2 class="companoins__heading subheading">Попутчики</h2>
 
       <p class="companions__description">
         Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут
@@ -111,7 +111,7 @@
     </section>
 
     <section class="tariffs">
-      <h2 class="tariffs__heading">Добавтьте свой профиль</h2>
+      <h2 class="tariffs__heading subheading">Добавтьте свой профиль</h2>
       <table class="tariffs__table">
         <tr class="visually-hidden">
           <td>Номер</td>
@@ -166,7 +166,7 @@
     </section>
 
     <section class="calls-to-action">
-      <h2 class="calls-to-action__heading">Заинтересовались?</h2>
+      <h2 class="calls-to-action__heading subheading">Заинтересовались?</h2>
 
       <p class="calls-to-action__call-to-register">
         Зарегистрируйтесь,
