Примиксовал блоки кнопок

--- a/source/blocks/companion/companion.html
+++ b/source/blocks/companion/companion.html
@@ -9,6 +9,6 @@
   {%- set tags = companion.tags -%}
   {% include "blocks/tags/tags.html" %}
   {% if companion.invitable %}
-  <a href="#" class="button companion__invitable">Позвать!</a>
+  <a href="#" class="companion__invitable button">Позвать!</a>
   {% endif %}
 </li>
