--- a/source/catalog.html
+++ b/source/catalog.html
@@ -80,7 +80,7 @@
           </fieldset>
         </details>
 
-        <button type="submit" class="filter-companions__submit">Показать</button>
+        <button type="submit" class="filter-companions__submit button button--white">Показать</button>
       </form>
     </section>
 
@@ -92,8 +92,8 @@
 
     <div class="controls">
       <a href="#" class="controls__more">Показать еще</a>
-      <a href="#" class="controls__previous">Предыдущая страница</a>
-      <a href="#" class="controls__next">Следующая страница</a>
+      <a href="#" class="controls__previous button button--white">Предыдущая страница</a>
+      <a href="#" class="controls__next button button--white">Следующая страница</a>
     </div>
   </main>
   {% include "blocks/page-footer/page-footer.html" %}
