--- a/source/index.html
+++ b/source/index.html
@@ -135,7 +135,7 @@
         </tr>
       </table>
       <details>
-        <summary class="tariffs__show-business-tariffs button">Показать тарифы для бизнеса</summary>
+        <summary class="tariffs__show-business-tariffs button button--text">Показать тарифы для бизнеса</summary>
         <section class="business-tariffs">
           <h2 class="business-tariffs__heading">Бизнес-тарифы</h2>
           <table class="business-tariffs__table">
