--- a/source/form.html
+++ b/source/form.html
@@ -60,7 +60,7 @@
 
           <label for="schedule__start-date">Дата начала путешествия:</label>
           <input type="date" name="" id="schedule__start-date" class="schedule__start-date" value="2019-07-28">
-          <button type="submit" name="next-step" class="step__next">Следующий шаг</button>
+          <button type="submit" name="next-step" class="step__next button">Следующий шаг</button>
         </form>
       </section>
       <section class="new-schedule__step step step-route">
@@ -73,8 +73,8 @@
 
           {{ selectDirection(4) }}
           <button type="submit" name="add-direction">Добавить страну</button>
-          <button type="submit" name="next-step" class="step__next">Следующий шаг</button>
-          <button type="submit" name="previous-step" class="step__previous">На шаг назад</button>
+          <button type="submit" name="next-step" class="step__next button">Следующий шаг</button>
+          <button type="submit" name="previous-step" class="step__previous button button--text">На шаг назад</button>
         </form>
       </section>
       <section class="new-schedule__step step step-fun">
@@ -95,8 +95,8 @@
                 placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться аритектурой и вот это все.</textarea>
             </li>
           </ul>
-          <button type="submit" class="step__finish">Отправить</button>
-          <button type="submit" name="previous-step" class="step__previous">На шаг назад</button>
+          <button type="submit" class="step__finish button">Отправить</button>
+          <button type="submit" name="previous-step" class="step__previous button button--text">На шаг назад</button>
         </form>
       </section>
     </section>
