--- a/source/index.html
+++ b/source/index.html
@@ -70,21 +70,27 @@
       <ul class="directions__list direction-list">
         <li class="direction-list__item direction">
           <img src="img/thailand-mobile@1x.jpg" alt="Острова посреди моря" class="direction__cover">
-          <h3 class="direction__title">Тайланд</h3>
-          <span class="direction__slogan">Джугли зовут!</span>
-          <span class="direction__travellers">18321</span>
+          <div class="direction__text-wrap">
+            <h3 class="direction__title">Тайланд</h3>
+            <span class="direction__slogan">Джугли зовут!</span>
+            <span class="direction__travellers">18321</span>
+          </div>
         </li>
         <li class="direction-list__item direction">
           <img src="img/france-mobile@1x.jpg" alt="Острова посреди моря" class="direction__cover">
-          <h3 class="direction__title">Франция</h3>
-          <span class="direction__slogan">Трэ бьен, манифик!</span>
-          <span class="direction__travellers">12518</span>
+          <div class="direction__text-wrap">
+            <h3 class="direction__title">Франция</h3>
+            <span class="direction__slogan">Трэ бьен, манифик!</span>
+            <span class="direction__travellers">12518</span>
+          </div>
         </li>
         <li class="direction-list__item direction">
           <img src="img/czech-mobile@1x.jpg" alt="Острова посреди моря" class="direction__cover">
-          <h3 class="direction__title">Чехия</h3>
-          <span class="direction__slogan">Закоулки старой Европы</span>
-          <span class="direction__travellers">5326</span>
+          <div class="direction__text-wrap">
+            <h3 class="direction__title">Чехия</h3>
+            <span class="direction__slogan">Закоулки старой Европы</span>
+            <span class="direction__travellers">5326</span>
+          </div>
         </li>
       </ul>
       <a href="#" class="directions__show-all button">Показать все</a>
