--- a/source/index.html
+++ b/source/index.html
@@ -183,7 +183,7 @@
       </p>
 
       <form action="https://echo.htmlacademy.ru" aria-label="Форма регистрации">
-        <input type="text" class="calls-to-action__registration-email" aria-label="Электронная почта" name="email">
+        <input type="text" class="calls-to-action__registration-email" aria-label="Электронная почта" name="email" placeholder="E-mail">
         <button type="submit" class="calls-to-action__register">
           <span class="visually-hidden">Зарегистрироваться</span>
         </button>
