Добавление в билд скриптов, и полифил details

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -97,6 +97,7 @@
     </div>
   </main>
   {% include "blocks/page-footer/page-footer.html" %}
+  <script src="js/details.js"></script>
 </body>
 
 </html>
