--- a/source/index.html
+++ b/source/index.html
@@ -215,6 +215,7 @@
     </section>
 
     {% include "blocks/page-footer/page-footer.html" %}
+    <script src="js/details.js"></script>
 </body>
 
 </html>
