Нормализация "данных из БД" для использования в качестве модификатора

--- a/source/blocks/companion-directions/companion-directions.html
+++ b/source/blocks/companion-directions/companion-directions.html
@@ -2,7 +2,7 @@
   <h4>Хочет посетить</h4>
   <ul class="companion-directions__list visit-wishes" aria-label="Хочет отправиться в страны:">
     {% for direction in directions %}
-    <li class="visit-wishes__item visit-wishes__item--{{direction}}">
+    <li class="visit-wishes__item visit-wishes__item--{{ direction | lower }}">
       <span class="visually-hidden">{{direction}}</span>
     </li>
     {% endfor %}
