--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,7 @@
 {%- from "blocks/logo/logo.html" import logo -%}
 {%- from "blocks/level/level.html" import level -%}
+{%- from "blocks/transport-list/transport-list.html" import transport -%}
+{%- from "blocks/tags/tags.html" import tags -%}
 <!DOCTYPE html>
 <html lang="ru">
 
