--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,6 +1,8 @@
 {%- set isInnerPage = true -%}
 {%- from "blocks/logo/logo.html" import logo -%}
 {%- from "blocks/level/level.html" import level -%}
+{%- from "blocks/transport-list/transport-list.html" import transport -%}
+{%- from "blocks/tags/tags.html" import tags -%}
 <!DOCTYPE html>
 <html lang="ru">
 
