--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,8 @@
 {%- from "blocks/select-direction/select-direction.html" import selectDirection -%}
 {%- from "blocks/logo/logo.html" import logo -%}
 {%- from "blocks/level/level.html" import level -%}
+{%- from "blocks/transport-list/transport-list.html" import transport -%}
+{%- from "blocks/tags/tags.html" import tags -%}
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -19,16 +21,16 @@
     <section class="my-profile">
       {{ level("my-profile", 80, 50, 3) }}
 
+      {{ transport("my-profile", myprofile.transport, true) }}
+
       <!-- adopt machine learning to provide more relevant image alts -->
       <img src="img/{{myprofile.avatar}}-mobile@1x.jpg" alt="Аватарка" class="my-profile__avatar">
 
       <a href="#" class="my-profile__change-avatar button">Сменить фото</a>
 
-      {%- set tags = myprofile.tags -%}
-      {% include "blocks/tags/tags.html" %}
+      {{ tags("my-profile", myprofile.tags, true) }}
 
-      {%- set transport = myprofile.transport -%}
-      {% include "blocks/transport-list/transport-list.html" %}
+
     </section>
 
     <section class="schedules">
