Макрос для инлайна svg иконок
временно будет заменено на спрайты

--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,7 @@
 {%- from "blocks/level/level.html" import level -%}
 {%- from "blocks/transport-list/transport-list.html" import transport -%}
 {%- from "blocks/tags/tags.html" import tags -%}
+{%- from "blocks/inline-svg/inline-svg.html" import inlineSvg -%}
 <!DOCTYPE html>
 <html lang="ru">
 
