--- a/source/blocks/page-footer/page-footer.html
+++ b/source/blocks/page-footer/page-footer.html
@@ -2,24 +2,29 @@
   {{ logo("page-footer", "96", "15", isInnerPage) }}
   <ul class="page-footer__social-list social-list">
     <li class="social-list__item">
-      <a class="social-list__link social-list__link--facebook" href="https://www.facebook.com/htmlacademy"><span
-          class="visually-hidden">Мы в
-          Фейсбуке</span></a>
+      <a class="social-list__link social-list__link--facebook" href="https://www.facebook.com/htmlacademy">
+        {{- inlineSvg("facebook") -}}
+        <span class="visually-hidden">Мы в Фейсбуке</span>
+      </a>
     </li>
     <li class="social-list__item">
-      <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy"><span
-          class="visually-hidden">Мы во
-          Вконтакте</span></a>
+      <a class="social-list__link social-list__link--vkontakte" href="https://vk.com/htmlacademy">
+        {{- inlineSvg("vk") -}}
+        <span class="visually-hidden">Мы во Вконтакте</span>
+      </a>
     </li>
     <li class="social-list__item">
-      <a class="social-list__link social-list__link--instagram" href="https://www.instagram.com/htmlacademy"><span
-          class="visually-hidden">Мы в
-          Инстаграме</span></a>
+      <a class="social-list__link social-list__link--instagram" href="https://www.instagram.com/htmlacademy">
+        {{- inlineSvg("instagram") -}}
+        <span class="visually-hidden">Мы в Инстаграме</span>
+      </a>
     </li>
   </ul>
   <section class="page-footer__copyright copyright">
     <span class="copyright__text">Разработано</span>
-    <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML
-        Academy</span></a>
+    <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+      <img src="img/htmlacademy.svg" alt="Щит HTML Academy" width="27" height="34">
+      <span class="visually-hidden">HTML Academy</span>
+    </a>
   </section>
 </footer>
