--- a/source/form.html
+++ b/source/form.html
@@ -10,6 +10,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сайт поиска попутчиков «Погнали» | Направления</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,7 +19,6 @@
   {%- set title = "Направления" -%}
   {% include "blocks/page-header/page-header.html" %}
   <main class="page-main">
-
     <section class="my-profile">
       {{ level("my-profile", 80, 50, 3) }}
 
