--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сайт поиска попутчиков «Погнали»</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -36,12 +37,12 @@
         <cite class="review__author">Мурат&nbsp;Эльтазин главный редактор газеты «гаджетлайф»</cite>
       </blockquote>
 
-      <ol class="first-screen__steps steps">
+      <ul class="first-screen__steps steps">
         <li class="steps__item">Выберите направление</li>
         <li class="steps__item">Изучите идеи путешественников</li>
         <li class="steps__item">Находите тех, кто похож на вас</li>
         <li class="steps__item">Путешествуйте вместе!</li>
-      </ol>
+      </ul>
 
       <section class="first-screen__about-service about-service">
         <h2 class="about-service__heading subheading">О сервисе</h2>
