--- a/source/blocks/companion-directions/companion-directions.html
+++ b/source/blocks/companion-directions/companion-directions.html
@@ -1,6 +1,7 @@
-<section class="companion__directions companion-directions">
-  <h4>Хочет посетить</h4>
-  <ul class="companion-directions__list visit-wishes" aria-label="Хочет отправиться в страны:">
+{% macro places(parent, places, isTextHidden = false) %}
+<section class="{{parent}}__places places">
+  <h4 class="places__heading">Хочет посетить</h4>
+  <ul class="{{parent}}__list visit-wishes" aria-label="Хочет отправиться в страны:">
     {% for direction in directions %}
     <li class="visit-wishes__item visit-wishes__item--{{ direction | lower }}">
       <span class="visually-hidden">{{direction}}</span>
@@ -8,3 +9,4 @@
     {% endfor %}
   </ul>
 </section>
+{% endmacro %}
