--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сайт поиска попутчиков «Погнали» | Попутчики</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
