--- a/source/blocks/page-header/page-header.html
+++ b/source/blocks/page-header/page-header.html
@@ -3,34 +3,34 @@
   <nav class="main-nav">
     <details class="main-menu">
       <summary class="main-menu__toggle-wrapper" aria-role="button" aria-haspopup="menu">
-        <svg class="main-menu__open" aria-label="Открыть меню" width="25" height="25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 11"><path d="M1.5 3h22c.8 0 1.5-.7 1.5-1.5S24.3 0 23.5 0h-22C.7 0 0 .7 0 1.5S.7 3 1.5 3zM23.5 8h-22C.7 8 0 8.7 0 9.5S.7 11 1.5 11h22c.8 0 1.5-.7 1.5-1.5S24.3 8 23.5 8z"/></svg>
-        <svg class="main-menu__close" aria-label="Закрыть меню" width="19" height="19" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18"><path d="M10.3 9l7.4-7.4c.4-.4.4-.9 0-1.3s-.9-.4-1.3 0L9 7.7 1.6.3C1.2-.1.7-.1.3.3s-.4.9 0 1.3L7.7 9 .3 16.4c-.4.4-.4.9 0 1.3s.9.4 1.3 0L9 10.3l7.4 7.4c.4.4.9.4 1.3 0s.4-.9 0-1.3L10.3 9z"/></svg>
+        <span role="img" class="main-menu__trigger main-menu__trigger--open" aria-label="Открыть меню"></span>
+        <span role="img" class="main-menu__trigger main-menu__trigger--close" aria-label="Закрыть меню"></span>
       </summary>
       <div class="main-nav__wrapper">
         {{ logo("page-header", "96", "15", isInnerPage) }}
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a {% if isInnerPage %}href="index.html" {% endif %}>О Сервисе</a>
+        <ul class="main-nav__list site-nav">
+          <li class="site-nav__item site-nav__item--active">
+            <a {% if isInnerPage %}href="index.html" {% endif %} class="site-nav__link">О Сервисе</a>
           </li>
-          <li class="site-list__item">
-            <a href="form.html">Направления</a>
+          <li class="site-nav__item">
+            <a href="form.html" class="site-nav__link">Направления</a>
           </li>
-          <li class="site-list__item">
-            <a href="catalog.html">Попутчики</a>
+          <li class="site-nav__item">
+            <a href="catalog.html" class="site-nav__link">Попутчики</a>
           </li>
         </ul>
-        <ul class="main-nav__list user-list">
-          <li class="user-list__item">
-            <a class="user-list__login" href="login.html">Авторизация</a>
+        <ul class="main-nav__list user-nav">
+          <li class="user-nav__item">
+            <a class="user-nav__login button" href="login.html">Авторизация</a>
           </li>
         </ul>
         <ul class="main-nav__list reach-list">
           <li class="reach-list__item">
-            <a class="reach-list__link reach-list--phone reach-list--inverse" href="tel:+78005558628">8 800
+            <a class="reach-list__link reach-list__link--phone reach-list--inverse" href="tel:+78005558628">8 800
               555-86-28</a>
           </li>
           <li class="reach-list__item">
-            <a class="reach-list__link reach-list--email reach-list--inverse"
+            <a class="reach-list__link reach-list__link--mail reach-list--inverse"
               href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </li>
         </ul>
