Изменил тип списка шагов на главной

--- a/source/index.html
+++ b/source/index.html
@@ -36,12 +36,12 @@
         <cite class="review__author">Мурат&nbsp;Эльтазин главный редактор газеты «гаджетлайф»</cite>
       </blockquote>
 
-      <ol class="first-screen__steps steps">
+      <ul class="first-screen__steps steps">
         <li class="steps__item">Выберите направление</li>
         <li class="steps__item">Изучите идеи путешественников</li>
         <li class="steps__item">Находите тех, кто похож на вас</li>
         <li class="steps__item">Путешествуйте вместе!</li>
-      </ol>
+      </ul>
 
       <section class="first-screen__about-service about-service">
         <h2 class="about-service__heading subheading">О сервисе</h2>
