--- a/source/index.html
+++ b/source/index.html
@@ -18,50 +18,6 @@
   {%- set title = "Сайт поиска попутчиков «Погнали»" -%}
   {% include "blocks/page-header/page-header.html" %}
   <main class="page-main">
-    <section class="first-screen">
-      <b class="first-screen__slogan">В путешествие с крутыми попутчиками!</b>
-      <ul class="first-screen__reach-n-user-list reach-n-user-list">
-        <li class="reach-n-user-list__item">
-          <a class="reach-n-user-list__link reach-n-user-list__link--phone" href="tel:+78005558628">8 800 555-86-28</a>
-        </li>
-        <li class="reach-n-user-list__item">
-          <a class="reach-n-user-list__link reach-n-user-list__link--email"
-            href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </li>
-        <li class="reach-n-user-list__item">
-          <a class="reach-n-user-list__link reach-n-user-list__link--auth" href="login.html">Авторизация</a>
-        </li>
-      </ul>
-
-      <blockquote class="first-screen__review review">
-        <p class="review__text">«Лучшее приложение, что я видел в жизни!»</p>
-        <cite class="review__author">Мурат&nbsp;Эльтазин главный редактор газеты «гаджетлайф»</cite>
-      </blockquote>
-
-      <ul class="first-screen__steps steps">
-        <li class="steps__item">Выберите направление</li>
-        <li class="steps__item">Изучите идеи путешественников</li>
-        <li class="steps__item">Находите тех, кто похож на вас</li>
-        <li class="steps__item">Путешествуйте вместе!</li>
-      </ul>
-
-      <section class="first-screen__about-service about-service">
-        <h2 class="about-service__heading subheading">О сервисе</h2>
-
-        <p class="about-service__description">
-          Любое путешествие веселее
-          с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в
-          чужих.
-        </p>
-
-        <p class="about-service__action">
-          А если найдете кого-то
-          близкого по духу — скорее
-          зовите в совместный трип!
-        </p>
-      </section>
-    </section>
-
     <section class="directions">
       <h2 class="directions__heading subheading">Направления</h2>
 
@@ -199,12 +155,12 @@
           Остались вопросы?
           Мы с радостью на них ответим!
         </p>
-        <ul class="reach-us__list reach-list">
-          <li class="reach-list__item">
-            <a class="reach-list__phone" href="tel:+78005558628">8 800 555-86-28</a>
+        <ul class="reach-us__list contacts">
+          <li class="contacts__item">
+            <a class="contacts__link contacts__link--phone" href="tel:+78005558628">8 800 555-86-28</a>
           </li>
-          <li class="reach-list__item">
-            <a class="reach-list__email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          <li class="contacts__item">
+            <a class="contacts__link contacts__link--mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </li>
         </ul>
       </section>
