--- a/source/form.html
+++ b/source/form.html
@@ -21,9 +21,9 @@
   {% include "blocks/page-header/page-header.html" %}
   <main class="page-main">
     <section class="my-profile">
-      {{ level("my-profile", 80, 50, 3) }}
+      {{ level("level--my my-profile", 80, 50, 3) }}
 
-      {{ transport("my-profile", myprofile.transport, true) }}
+      {{ transport("transport-list--editable my-profile", myprofile.transport, true) }}
 
       <!-- adopt machine learning to provide more relevant image alts -->
       <img src="img/{{myprofile.avatar}}-mobile@1x.jpg" alt="Аватарка" class="my-profile__avatar">
