--- a/source/blocks/schedule/schedule.html
+++ b/source/blocks/schedule/schedule.html
@@ -2,4 +2,5 @@
   <h3 class="schedule__heading">{{loop.index}}. {{schedule.title}}</h3>
   <span class="schedule__companions">{{schedule.companions}}</span>
   <span class="schedule__dates">{{schedule.dates}}</span>
+  <a href="#" class="schedule__change-button">Изменить</a>
 </li>
