--- a/source/form.html
+++ b/source/form.html
@@ -53,17 +53,17 @@
             Укажите предпочтительное количество попутчиков, которых
             вы хотели бы позвать в поездку и ее предполагаемую длительность.
           </p>
-          <label for="schedule__companions" class="schedule__companions-label">ищу попутчиков:</label>
-          <input type="number" id="schedule__companions" class="schedule__companions" value=2>
+          <label for="new-schedule__companions" class="new-schedule__companions-label">ищу попутчиков:</label>
+          <input type="text" id="new-schedule__companions" class="new-schedule__companions" value=2>
 
-          <label for="schedule__duration" class="schedule__duration-label">Длительность:</label>
-          <input type="number" id="schedule__duration" class="schedule__duration" value=2>
+          <label for="new-schedule__duration" class="new-schedule__duration-label">Длительность:</label>
+          <input type="text" id="new-schedule__duration" class="new-schedule__duration" value=2>
 
-          <input type="checkbox" id="schedule__children-ok" class="children-ok" checked>
-          <label for="schedule__children-ok" class="schedule__children-ok-label">Можно с детьми</label>
+          <input type="checkbox" id="new-schedule__children-ok" class="children-ok" checked>
+          <label for="new-schedule__children-ok" class="new-schedule__children-ok-label">Можно с детьми</label>
 
-          <label for="schedule__start-date">Дата начала путешествия:</label>
-          <input type="date" name="" id="schedule__start-date" class="schedule__start-date" value="2019-07-28">
+          <label for="new-schedule__start-date">Дата начала путешествия:</label>
+          <input type="date" name="" id="new-schedule__start-date" class="new-schedule__start-date" value="2019-07-28">
           <button type="submit" name="next-step" class="step__next button">Следующий шаг</button>
         </form>
       </section>
