--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
   {%- set title = "Сайт поиска попутчиков «Погнали»" -%}
   {% include "blocks/page-header/page-header.html" %}
   <main class="page-main">
-    <section class="directions">
+    <section class="directions page-section">
       <h2 class="directions__heading subheading">Направления</h2>
 
       <p class="directions__disclaimer">
@@ -57,7 +57,7 @@
       <a href="#" class="directions__show-all button">Показать все</a>
     </section>
 
-    <section class="companions">
+    <section class="companions page-section">
       <h2 class="companoins__heading subheading">Попутчики</h2>
 
       <p class="companions__description">
@@ -77,7 +77,7 @@
       <a href="#" class="companions__show-all button">Показать всех</a>
     </section>
 
-    <section class="tariffs">
+    <section class="tariffs page-section">
       <h2 class="tariffs__heading subheading">Добавтьте свой профиль</h2>
       <table class="tariffs__table">
         <tr class="visually-hidden">
@@ -86,17 +86,14 @@
           <td>Цена</td>
         </tr>
         <tr class="tariffs__service service">
-          <td class="service__number">1</td>
           <td class="service__name">Базовое размещение</td>
           <td class="service__price">Бесплатно</td>
         </tr>
         <tr class="tariffs__service service">
-          <td class="service__number">2</td>
           <td class="service__name">Вывод на первых позициях</td>
           <td class="service__price">99 руб./мес</td>
         </tr>
         <tr class="tariffs__service service">
-          <td class="service__number">3</td>
           <td class="service__name">Кастомный цвет карточки</td>
           <td class="service__price">от 20 коп./лайк</td>
         </tr>
@@ -132,7 +129,7 @@
       </details>
     </section>
 
-    <section class="calls-to-action">
+    <section class="calls-to-action page-section">
       <h2 class="calls-to-action__heading subheading">Заинтересовались?</h2>
 
       <p class="calls-to-action__call-to-register">
@@ -166,7 +163,7 @@
       </section>
     </section>
 
-    <section class="locate-us">
+    <section class="locate-us page-section">
       <address class="locate-us__address">
         ул. Большая
         Конюшенная, 19/8
